# avro-to-arrow-py

./: .gitignore  pyproject.toml  readme.md  setup.cfg  setup.py
src/avro_to_arrow/: __init__.py  _reader.cpp  _reader.pxd  _reader.pyi  _reader.pyx  _reader_py.pxd  _reader_py.pyx  common.py  reader.py
