[metadata]
name = avro-to-arrow
version = 0.1.0
author = TNEX Data
author-email = sonpm2@msb.com.vn,thutx2@msb.com.vn
license = private
description = Convert avro to Arrow
summary = Convert avro to Arrow
home-page = tnex-analytics.tnex.com.vn

[options]
package_dir =
     =src
packages=
  find:

include_package_data = True
install_requires =
  pyarrow>=2.0.0
  fastavro>=1.0.0.post1
  numpy>=1.19.0
  python-snappy>=0.5.4
  importlib; python_version == "3.8.5"

[options.packages.find]
where=src
include=
    avro_to_arrow*
    avro_to_arrow/*
exclude=*test*